// Vitest Snapshot v1

exports[`generate namespaces > namespaces with vite 1`] = `
"{
        'my-package-1': [
          name => resolveVitePage(name, import.meta.glob('/test_node_modules/my-plugin1/src/Pages/**/*.vue'), false),
        ],
        'my-package-2': [
          name => resolveVitePage(name, import.meta.glob('/test_node_modules/my-plugin2/src/other-pages/**/*.vue'), false),
        ],
        'my-php-package': [
          name => resolveVitePage(name, import.meta.glob('/test_vendor/ycs77/my-php-package/resources/js/Pages/**/*.vue'), false),
        ],
      }"
`;

exports[`generate namespaces > namespaces with webpack 1`] = `
"{
        'my-package-1': [
          name => require(\`../test_node_modules/my-plugin1/src/Pages/\${name}\`),
        ],
        'my-package-2': [
          name => require(\`../test_node_modules/my-plugin2/src/other-pages/\${name}\`),
        ],
        'my-php-package': [
          name => require(\`../test_vendor/ycs77/my-php-package/resources/js/Pages/\${name}\`),
        ],
      }"
`;

exports[`generate namespaces > simple options 1`] = `
"{
      }"
`;

exports[`generate namespaces > vite with ssr 1`] = `
"{
        'my-package-1': [
          name => resolveVitePage(name, import.meta.globEager('/test_node_modules/my-plugin1/src/Pages/**/*.vue'), false),
        ],
        'my-package-2': [
          name => resolveVitePage(name, import.meta.globEager('/test_node_modules/my-plugin2/src/other-pages/**/*.vue'), false),
        ],
        'my-php-package': [
          name => resolveVitePage(name, import.meta.globEager('/test_vendor/ycs77/my-php-package/resources/js/Pages/**/*.vue'), false),
        ],
      }"
`;

exports[`generate namespaces > webpack with import 1`] = `
"{
        'my-package-1': [
          name => import(\`../test_node_modules/my-plugin1/src/Pages/\${name}\`),
        ],
        'my-package-2': [
          name => import(\`../test_node_modules/my-plugin2/src/other-pages/\${name}\`),
        ],
        'my-php-package': [
          name => import(\`../test_vendor/ycs77/my-php-package/resources/js/Pages/\${name}\`),
        ],
      }"
`;
